--- a/Latvia.Rmd
+++ b/Latvia.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'Latvia: COVID-19 Analysis'
 author: "David Jackson"
-date: "12/16/2020"
+date: "12/22/2020 9:40 PM/EST"
 output: 
   html_document: 
     fig_width: 8
@@ -32,8 +32,8 @@ df$date <- as.Date(df$date)
 EU$date <- as.Date(EU$date)
 df <- df[order(df$date),]
 EU <- EU[order(EU$date),]
-df$CMA <- ma(df$new_cases,7)
-df$DMA <- ma(df$new_deaths,7)
+df$CMA <- ma(df$new_cases,14)
+df$DMA <- ma(df$new_deaths,14)
 dbDisconnect(db)
 ```
 
@@ -111,13 +111,12 @@ ggplot(Monthly_new_deaths) + geom_col(aes(x=Monthly,y=new_deaths)) +
   scale_y_continuous(labels = scales::comma)
 ```
 
-#### Sweden in the EU: Covid-19 Cases and Deaths
+#### Latvia in the EU: Covid-19 Cases and Deaths
 * EU Counties with Population between 1,000,000 and 2,000,000
 
 ```{r}
 
-EU1 <- subset(EU,location == c("Luxembourg","Cyprus"," Estonia","Latvia","Slovenia",
-                               "North Macedonia"))
+EU1 <- subset(EU,location == c("Luxembourg","Cyprus"," Estonia","Latvia","Slovenia","North Macedonia"))
 
 EUTotal <-EU1 %>% group_by(location) %>% summarise(
                                 Case =sum(new_cases),
